--- a/backend/.env.example
+++ b/backend/.env.example
@@ -87,6 +87,17 @@ ACCESS_TOKEN_EXPIRE_MINUTES=10080
 # CSRF Protection
 CSRF_TOKEN_EXPIRE_MINUTES=10080
 
+# Content-Type Validation
+# SECURITY: Content-Type validation middleware prevents parser confusion attacks
+# - POST/PUT/PATCH/DELETE requests MUST have correct Content-Type header
+# - JSON endpoints require "application/json"
+# - File upload endpoints require "multipart/form-data"
+# - Returns 415 Unsupported Media Type for incorrect Content-Type
+# - No configuration needed (always enabled, uses DEBUG flag for behavior)
+# - Production: Strict validation (fail-closed)
+# - Development: Lenient (logs warning but continues) for easier testing
+# Reference: OWASP API8:2023 Security Misconfiguration
+
 # Encryption (local/dev only - use AWS Secrets Manager in production)
 # Generate with: python -c 'import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())'
 ENCRYPTION_MASTER_KEY=your-base64-encoded-32-byte-key-here
