feat(security): implement nonce-based Content Security Policy for enhanced XSS protection
This commit introduces a nonce-based Content Security Policy (CSP) to strengthen XSS defenses in production environments. Key changes include:

- Added nonce generation per request in `SecurityHeadersMiddleware` to ensure only scripts with matching nonces are executed.
- Updated CSP directives to enforce strict policies in production, disallowing `unsafe-inline` and `unsafe-eval`.
- Enhanced `.env.example` with detailed documentation on CSP configuration and its implementation.
- Created new utility functions in the frontend for extracting and applying the CSP nonce to dynamically created scripts and styles.
- Updated frontend build configuration to ensure compliance with CSP requirements, eliminating inline scripts.

These enhancements significantly improve the application's security posture against XSS attacks while maintaining development convenience.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -98,6 +98,59 @@ CSRF_TOKEN_EXPIRE_MINUTES=10080
 # - Development: Lenient (logs warning but continues) for easier testing
 # Reference: OWASP API8:2023 Security Misconfiguration
 
+# Content Security Policy (CSP) - Nonce-Based XSS Protection
+# SECURITY: CSP prevents XSS attacks by controlling what resources can execute
+# - Production/Staging: Strict nonce-based CSP (NO unsafe-inline, NO unsafe-eval)
+# - Development/Local: Permissive CSP (allows unsafe-inline/eval for Vite HMR)
+# - Nonce rotates per request (cryptographically secure, 256-bit random)
+# - Frontend receives nonce via X-CSP-Nonce response header
+#
+# How it works:
+# 1. Backend generates unique nonce per request (secrets.token_urlsafe(32))
+# 2. Nonce stored in request.state.csp_nonce for middleware/endpoint access
+# 3. CSP header includes nonce: script-src 'self' 'nonce-ABC123...'
+# 4. X-CSP-Nonce header returns nonce to frontend
+# 5. Frontend adds nonce to inline scripts: <script nonce="ABC123...">
+# 6. Browser only executes scripts with matching nonce attribute
+#
+# Production CSP directives:
+# - default-src 'self'                  # Default: only same origin
+# - script-src 'self' 'nonce-{NONCE}'   # Scripts: only with matching nonce
+# - style-src 'self' 'nonce-{NONCE}'    # Styles: only with matching nonce
+# - img-src 'self' data: https:         # Images: self, data URIs, HTTPS
+# - font-src 'self' data:               # Fonts: self, data URIs
+# - connect-src 'self'                  # API calls: only same origin
+# - frame-ancestors 'none'              # Disallow framing (clickjacking prevention)
+# - base-uri 'self'                     # Restrict <base> tag
+# - form-action 'self'                  # Forms only submit to same origin
+# - upgrade-insecure-requests           # Upgrade HTTP to HTTPS (production only)
+#
+# Development CSP directives:
+# - Adds 'unsafe-inline' and 'unsafe-eval' for Vite HMR
+# - Allows http://localhost:* and ws://localhost:* for Vite dev server
+# - No upgrade-insecure-requests (development uses HTTP)
+#
+# Environment detection:
+# - Production CSP: DEBUG=false AND ENVIRONMENT=production/staging
+# - Development CSP: DEBUG=true OR ENVIRONMENT=local
+#
+# No configuration needed (CSP automatically adapts to environment)
+#
+# Security benefits:
+# - Blocks XSS attacks from injected inline scripts (attacker has no nonce)
+# - Prevents eval()-based code execution attacks
+# - Defense-in-depth: Even if attacker bypasses input validation, CSP blocks execution
+# - OWASP Top 10: A03:2021 Injection (XSS prevention)
+#
+# Frontend integration guide:
+# - Backend returns nonce in X-CSP-Nonce header
+# - Frontend extracts nonce: const nonce = response.headers.get('X-CSP-Nonce')
+# - Add to inline scripts: <script nonce={nonce}>...</script>
+# - Add to inline styles: <style nonce={nonce}>...</style>
+# - Vite production builds automatically use nonce for code splitting chunks
+#
+# Reference: OWASP A03:2021 Injection, CSP Level 3 Specification
+
 # Encryption (local/dev only - use AWS Secrets Manager in production)
 # Generate with: python -c 'import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())'
 ENCRYPTION_MASTER_KEY=your-base64-encoded-32-byte-key-here
