feat(security): implement comprehensive security hardening for HIPAA compliance
This commit addresses critical security vulnerabilities identified in the
security audit, implementing emergency infrastructure fixes and data
protection measures for HIPAA compliance.

## Phase 1: Emergency Infrastructure Fixes (Critical)

### Network Security
- **PostgreSQL**: Bind to 127.0.0.1 only (was 0.0.0.0) - prevents network access
- **MinIO**: Bind to 127.0.0.1:9000,9001 (was 0.0.0.0) - prevents S3 exposure
- **MailHog**: Bind to 127.0.0.1:1025,8025 (was 0.0.0.0) - prevents SMTP exposure
- **ClamAV**: Bind to 127.0.0.1:3310 (was 0.0.0.0) - prevents antivirus exposure

### Credential Security
- Generate strong credentials (256-bit entropy) for all services
- PostgreSQL: 42-char password (was 6-char "pazpaz")
- MinIO: 16/58-char credentials (was minioadmin/minioadmin123)
- Parameterize credentials in docker-compose.yml via environment variables
- Add Pydantic validators to reject weak credentials in production

### JWT Security Hardening
- Add explicit JWT algorithm header validation (prevents alg: none attacks)
- Require all expected claims (exp, sub, user_id, workspace_id, email, jti)
- Enforce signature verification (prevents unsigned token attacks)

**Security Impact:**
- 0 services now accessible from network (was 5 exposed)
- All credentials 256+ bit entropy (was weak/default)
- JWT authentication hardened against known attacks

## Phase 2: Data Protection & HIPAA Compliance (Critical)

### Client PII/PHI Encryption
- Encrypt 8 Client fields with AES-256-GCM:
  * first_name, last_name (identity)
  * email, phone (contact)
  * address (location)
  * medical_history (PHI)
  * emergency_contact_name, emergency_contact_phone (contact)
- Created migration: a2341bb8aa45_encrypt_client_pii_fields.py
- Batch encryption script for existing data
- Verification and performance testing scripts
- Comprehensive migration guide (3,000+ lines)

### Database SSL/TLS Hardening
- Add verify-c

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,39 +43,46 @@ DATABASE_URL=postgresql+asyncpg://pazpaz:CHANGE_ME_GENERATE_RANDOM_32_CHARS@loca
 # AWS Secrets Manager Secret Name (override if needed):
 DB_SECRETS_MANAGER_KEY_NAME=pazpaz/database-credentials
 
-# Database SSL/TLS Configuration (HIPAA requirement)
-# CRITICAL: SSL/TLS MUST be enabled in production to encrypt PHI data in transit
+# Database SSL/TLS Configuration
+# SECURITY: Production MUST use verify-ca or verify-full
+# - verify-full: Verify certificate AND hostname (CA-signed certs, RECOMMENDED for production)
+# - verify-ca: Verify certificate only (self-signed certs or hostname mismatch)
+# - require: Encrypt but DON'T verify certificate (DEVELOPMENT ONLY, INSECURE)
 #
-# SSL Modes (in order of security, highest to lowest):
-#   - verify-full: Verify certificate and hostname (production recommended)
-#   - verify-ca: Verify certificate only (acceptable for dev/staging)
-#   - require: Require encryption but don't verify certificate
-#   - prefer: Try SSL, fallback to unencrypted (NOT RECOMMENDED)
-#   - allow: Try unencrypted, fallback to SSL (NOT RECOMMENDED)
-#   - disable: No encryption (HIPAA VIOLATION - dev only)
+# HIPAA Requirement: §164.312(e)(1) - Transmission Security
+#
+# SSL Modes Explained:
+# ┌──────────────┬─────────────┬──────────────┬──────────────────────────────────┐
+# │ Mode         │ Encryption  │ Verify Cert  │ Use Case                         │
+# ├──────────────┼─────────────┼──────────────┼──────────────────────────────────┤
+# │ verify-full  │ ✅ TLS 1.2+ │ ✅ Cert + CN │ Production (CA-signed certs)     │
+# │ verify-ca    │ ✅ TLS 1.2+ │ ✅ Cert only │ Dev (self-signed) or AWS RDS     │
+# │ require      │ ✅ TLS 1.2+ │ ❌ None      │ Dev only (INSECURE, MITM risk)   │
+# │ prefer       │ ⚠️  Maybe   │ ❌ None      │ NEVER USE (downgrades to plain)  │
+# │ disable      │ ❌ None     │ ❌ None      │ NEVER USE (HIPAA violation)      │
+# └──────────────┴─────────────┴──────────────┴──────────────────────────────────┘
 #
 # Development: Use self-signed certificates (generated via scripts/generate_ssl_certs.sh)
 # Production: Use CA-signed certificates (AWS RDS, Let's Encrypt, etc.)
 #
 DB_SSL_ENABLED=true
-DB_SSL_MODE=verify-ca
+DB_SSL_MODE=verify-ca  # Development with self-signed certs
+# DB_SSL_MODE=verify-full  # Production with CA-signed certs
 DB_SSL_CA_CERT_PATH=/Users/yussieik/Desktop/projects/pazpaz/backend/certs/ca-cert.pem
 DB_SSL_CLIENT_CERT_PATH=
 DB_SSL_CLIENT_KEY_PATH=
 #
-# Production AWS RDS Example:
-#   DB_SSL_ENABLED=true
-#   DB_SSL_MODE=verify-full
-#   DB_SSL_CA_CERT_PATH=/etc/ssl/certs/rds-ca-2019-root.pem
-#   DB_SSL_CLIENT_CERT_PATH=
-#   DB_SSL_CLIENT_KEY_PATH=
+# Production AWS RDS SSL Configuration:
+# DB_SSL_MODE=verify-full
+# DB_SSL_CA_CERT_PATH=/path/to/rds-ca-2019-root.pem
+# Download RDS CA: https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
 #
 # To generate self-signed certificates for development:
 #   ./backend/scripts/generate_ssl_certs.sh
 #
 # To download AWS RDS CA certificate:
-#   wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
-#   mv global-bundle.pem /etc/ssl/certs/rds-ca-2019-root.pem
+#   curl -o /etc/ssl/certs/rds-ca-2019-root.pem \
+#     https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
 
 # Redis
 # Generate strong password with: openssl rand -base64 32 | tr -d '/+='
