feat(security): implement Content Security Policy and rate limit handling
- Added a Content Security Policy (CSP) meta tag in index.html to enhance security against XSS attacks, with environment-specific configurations for development and production.
- Introduced a new RateLimitBanner component to display user-friendly notifications when API requests are throttled due to rate limits.
- Updated the axios client to handle 429 status codes, providing feedback to users when rate limits are exceeded and integrating with the new rate limit store for state management.
- Enhanced the useToast composable to include a method for showing rate limit error messages with countdown timers.

These changes improve the application's security posture and user experience by effectively managing API rate limits and preventing XSS vulnerabilities.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:security": "vitest run tests/integration/security-headers.spec.ts",
+    "verify:security-headers": "tsx scripts/verify-security-headers.ts"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
@@ -42,6 +44,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.21",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.36.0",
     "happy-dom": "^20.0.7",
     "jsdom": "^27.0.0",
@@ -50,6 +53,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.3",
     "vite": "^7.1.11",
     "vitest": "^3.2.4",
